# STM32StdlibCMake

./: CMakeLists.txt  README.md
Sys/: Debug.c  Timer.c  Timer.h  delay.c  delay.h  sys.c
User/: main.c
cmake/: CMakeLists.txt  gcc-arm-none-eabi.cmake
lib/: CMakeLists.txt
lib/CMSIS/: stm32f4xx.h  system_stm32f4xx.c
lib/STM32F4xx_StdPeriph_Driver/src/: stm32f4xx_sai.c
scripts/: OpenocdTools.py  STM32L151C8Tx_FLASH.ld  config.json  config_init.py  gcc-arm-none-eabi.cmake  util_copy.py  util_json.py  util_opocd_download.py
src/: CMakeLists.txt  main.h
src/app/: CMakeLists.txt  main.c  main.h
src/app/hal/: bsp_led.c  bsp_led.h
src/app/sys/: debug.c  debug.h  delay.h  sys.c  sys.h  timer.c  timer.h
src/hardware/: CMakeLists.txt
src/sys/: CMakeLists.txt
src/sys/inc/: delay.h  sys.h  timer.h
src/sys/src/: debug.c  sys.c  timer.c
