# set(INCLUDE_DIR 
#     ${CMAKE_CURRENT_LIST_DIR}/inc
# )

# file(GLOB SOURCES_FILE
#     ${CMAKE_CURRENT_LIST_DIR}/src/*.c
# )

# add_library(hardware STATIC ${SOURCES_FILE})
# target_include_directories(hardware PUBLIC ${INCLUDE_DIR})
# target_link_libraries(hardware PRIVATE
#     fwlib
#     sys
# )
